--- a/P0_Characterise/figs/.gitignore
+++ b/P0_Characterise/figs/.gitignore
@@ -1,1 +1,9 @@
 Cell_Mix_Boxplots.pdf
+Age differences between cases and controls.png
+BMI differences between cases and controls.png
+Ethnicity breakdown.png
+Gender and Age differences between cases and controls.png
+Gender in FEP and Controls.png
+Medication and Weight.png
+Medication for FEP patients.png
+Smoking in cases and controls.png
