--- a/P0_Characterise/output/.gitignore
+++ b/P0_Characterise/output/.gitignore
@@ -1,2 +1,4 @@
 GAP_FEP_eset_linear_adj_Data.RData
 GAP_FEP_small_Gene_Expression_Data.RData
+Table_1_Demographics.tsv
+Table_2_Clinicalinformation.tsv
