--- a/P0_Characterise/figs/.gitignore
+++ b/P0_Characterise/figs/.gitignore
@@ -7,3 +7,7 @@ Gender in FEP and Controls.png
 Medication and Weight.png
 Medication for FEP patients.png
 Smoking in cases and controls.png
+Relationship of Panss and Age.png
+Relationship of Panss and BMI.png
+Relationship of Panss and Tobacco.png
+Relationship of PanssNegative and PanssPositive.png
