--- a/P0_Characterise/output/.gitignore
+++ b/P0_Characterise/output/.gitignore
@@ -2,3 +2,10 @@ GAP_FEP_eset_linear_adj_Data.RData
 GAP_FEP_small_Gene_Expression_Data.RData
 Table_1_Demographics.tsv
 Table_2_Clinicalinformation.tsv
+testing_df_Table_1_Demographics.tsv
+testing_df_Table_2_Clinicalinformation.tsv
+training_df_Table_1_Demographics.tsv
+training_df_Table_2_Clinicalinformation.tsv
+.~lock.testing_df_Table_1_Demographics.tsv#
+.~lock.testing_df_Table_2_Clinicalinformation.tsv#
+Train_and_Test_data.Rdata
