Save feature selection

--- a/P1_Hypothesis_Free/figs/.gitignore
+++ b/P1_Hypothesis_Free/figs/.gitignore
@@ -11,3 +11,5 @@ Relationship of Panss and Age.png
 Relationship of Panss and BMI.png
 Relationship of Panss and Tobacco.png
 Relationship of PanssNegative and PanssPositive.png
+ RFE.jpg
+ RFE_SC.jpg
