--- a/P0_Characterise/figs/.gitignore
+++ b/P0_Characterise/figs/.gitignore
@@ -11,3 +11,4 @@ Relationship of Panss and Age.png
 Relationship of Panss and BMI.png
 Relationship of Panss and Tobacco.png
 Relationship of PanssNegative and PanssPositive.png
+Medication vs PRS.png
