--- a/P1_Hypothesis_Free/figs/.gitignore
+++ b/P1_Hypothesis_Free/figs/.gitignore
@@ -11,5 +11,9 @@ Relationship of Panss and Age.png
 Relationship of Panss and BMI.png
 Relationship of Panss and Tobacco.png
 Relationship of PanssNegative and PanssPositive.png
+RFE.jpg
+RFE_SC.jpg
+Dotplot_comparing_CV_hypothesis_free.png
+Dotplot_comparing_models_Hypothesis_Free.png
  RFE.jpg
  RFE_SC.jpg
