Custom Grid search for RF.

--- a/P1_Hypothesis_Free/figs/.gitignore
+++ b/P1_Hypothesis_Free/figs/.gitignore
@@ -15,5 +15,8 @@ RFE.jpg
 RFE_SC.jpg
 Dotplot_comparing_CV_hypothesis_free.png
 Dotplot_comparing_models_Hypothesis_Free.png
+RFE.jpg
+RFE_SC.jpg
+Rplot.png
  RFE.jpg
  RFE_SC.jpg
