SVM grid search added plus a bunch of stuff.

--- a/P1_Hypothesis_Free/figs/.gitignore
+++ b/P1_Hypothesis_Free/figs/.gitignore
@@ -18,5 +18,25 @@ Dotplot_comparing_models_Hypothesis_Free.png
 RFE.jpg
 RFE_SC.jpg
 Rplot.png
+RFE.jpg
+RFE_SC.jpg
+p1_3_GBM_Accuracy_heatmap.jpg
+p1_3_GBM_Kappa_heatmap.jpg
+p1_3_svmPoly_Accuracy_final_heatmap.jpg
+p1_3_svmPoly_Accuracy_screen_heatmap.jpg
+p1_3_svmPoly_Kappa_final_heatmap.jpg
+p1_3_svmPoly_Kappa_screen_heatmap.jpg
+p1_3_GBM_Kappa_.png
+p1_3_GBM_accuracy_.png
+p1_3_RF_Kappa_.png
+p1_3_RF_accuracy_.png
+RFE.jpg
+RFE_SC.jpg
+p1_3_GBM_Accuracy_heatmap.jpg
+p1_3_GBM_Kappa_heatmap.jpg
+p1_3_svmPoly_Accuracy_final_heatmap.jpg
+p1_3_svmPoly_Accuracy_screen_heatmap.jpg
+p1_3_svmPoly_Kappa_final_heatmap.jpg
+p1_3_svmPoly_Kappa_screen_heatmap.jpg
  RFE.jpg
  RFE_SC.jpg
