--- a/P1_Hypothesis_Free/figs/.gitignore
+++ b/P1_Hypothesis_Free/figs/.gitignore
@@ -63,10 +63,17 @@ p1_3_GBM_Kappa_heatmap.jpg
 p1_3_GBM_Accuracy_heatmap.jpg
 RFE.jpg
 RFE_SC.jpg
+p1_3_svmPoly_Kappa_screen_heatmap.jpg
+p1_3_svmPoly_Kappa_final_heatmap.jpg
+p1_3_svmPoly_Accuracy_screen_heatmap.jpg
+p1_3_svmPoly_Accuracy_final_heatmap.jpg
+p1_3_GBM_Kappa_heatmap.jpg
+p1_3_GBM_Accuracy_heatmap.jpg
+RFE.jpg
+RFE_SC.jpg
  p1_3_svmPoly_Kappa_screen_heatmap.jpg
  p1_3_svmPoly_Kappa_final_heatmap.jpg
  p1_3_svmPoly_Accuracy_screen_heatmap.jpg
  p1_3_svmPoly_Accuracy_final_heatmap.jpg
  p1_3_GBM_Kappa_heatmap.jpg
  p1_3_GBM_Accuracy_heatmap.jpg
- RFE.jpg
