Major cleanup. Still needs work.

--- a/P1_Hypothesis_Free/output/.gitignore
+++ b/P1_Hypothesis_Free/output/.gitignore
@@ -15,3 +15,4 @@ RFE_model_results_hypothesis_free_data.Rdata
 Classification_models.rdata
 P1_3_High_Low_complexity_model_list.rdata
 p1_4_RF_model_Table_CM_1_Demographics.tsv
+p1_4_RF_model_Table_CM_1_meds_Demographics.tsv
