--- a/P1_Hypothesis_Free/output/.gitignore
+++ b/P1_Hypothesis_Free/output/.gitignore
@@ -16,3 +16,6 @@ Classification_models.rdata
 P1_3_High_Low_complexity_model_list.rdata
 p1_4_RF_model_Table_CM_1_Demographics.tsv
 p1_4_RF_model_Table_CM_1_meds_Demographics.tsv
+p1_3_RF_model_simple_varImp.tsv
+.~lock.p1_4_RF_model_Table_CM_1_meds_Demographics.tsv#
+.~lock.p1_3_RF_model_simple_varImp.tsv#
