Needs cleaning and editing. but getting better.

--- a/P2_Hypothesis_Driven/output/.gitignore
+++ b/P2_Hypothesis_Driven/output/.gitignore
@@ -1,3 +1,6 @@
 rfe_predictors.csv
 RFE_model_results_hypothesis_free_data.Rdata
 Classification_models.rdata
+p2_3_RF_model_Table_CM_1_Demographics.csv
+p2_3_RF_model_Table_CM_1_meds_Demographics.csv
+p2_3_RF_model_Table_CM_1_meds_zzzzzDemographics.csv
