Updates and cleanup.

--- a/P2_Hypothesis_Driven/output/.gitignore
+++ b/P2_Hypothesis_Driven/output/.gitignore
@@ -4,3 +4,5 @@ Classification_models.rdata
 p2_3_RF_model_Table_CM_1_Demographics.csv
 p2_3_RF_model_Table_CM_1_meds_Demographics.csv
 p2_3_RF_model_Table_CM_1_meds_zzzzzDemographics.csv
+.~lock.p2_3_RF_model_Table_CM_1_Demographics.csv#
+.~lock.p2_3_RF_model_Table_CM_1_meds_Demographics.csv#
