--- a/P2_Hypothesis_Driven/output/.gitignore
+++ b/P2_Hypothesis_Driven/output/.gitignore
@@ -6,3 +6,5 @@ p2_3_RF_model_Table_CM_1_meds_Demographics.csv
 p2_3_RF_model_Table_CM_1_meds_zzzzzDemographics.csv
 .~lock.p2_3_RF_model_Table_CM_1_Demographics.csv#
 .~lock.p2_3_RF_model_Table_CM_1_meds_Demographics.csv#
+p2_3_RF_model_simple_Demographics.csv
+p2_3_RF_model_simple_varImp.csv
