Huge update to HD machine learning script. Few functions etc. Done.

--- a/P2_Hypothesis_Driven/output/.gitignore
+++ b/P2_Hypothesis_Driven/output/.gitignore
@@ -8,3 +8,10 @@ p2_3_RF_model_Table_CM_1_meds_zzzzzDemographics.csv
 .~lock.p2_3_RF_model_Table_CM_1_meds_Demographics.csv#
 p2_3_RF_model_simple_Demographics.csv
 p2_3_RF_model_simple_varImp.csv
+p2_3_High_Low_complexity_model_list.rdata
+p2_3_RF_fit_Table_CM_1_Demographics.csv
+p2_3_RF_fit_Table_CM_1_meds_Demographics.csv
+p2_3_c50_fit_Table_CM_1_Demographics.csv
+p2_3_c50_fit_Table_CM_1_meds_Demographics.csv
+p2_3_nb_fit_Table_CM_1_Demographics.csv
+p2_3_nb_fit_Table_CM_1_meds_Demographics.csv
