Updated table generation to include stargazer.

--- a/P2_Hypothesis_Driven/output/.gitignore
+++ b/P2_Hypothesis_Driven/output/.gitignore
@@ -15,3 +15,16 @@ p2_3_c50_fit_Table_CM_1_Demographics.csv
 p2_3_c50_fit_Table_CM_1_meds_Demographics.csv
 p2_3_nb_fit_Table_CM_1_Demographics.csv
 p2_3_nb_fit_Table_CM_1_meds_Demographics.csv
+p2_3_latex_RF_fit_Table_CM_1_Demographics.csv
+p2_3_latex_RF_fit_Table_CM_1_meds_Demographics.csv
+p2_3_latex_c50_fit_Table_CM_1_Demographics.csv
+p2_3_latex_c50_fit_Table_CM_1_meds_Demographics.csv
+p2_3_latex_nb_fit_Table_CM_1_Demographics.csv
+p2_3_latex_nb_fit_Table_CM_1_meds_Demographics.csv
+p2_3not_latex_RF_fit_Table_CM_1_Demographics.csv
+p2_3not_latex_RF_fit_Table_CM_1_meds_Demographics.csv
+p2_3not_latex_c50_fit_Table_CM_1_Demographics.csv
+p2_3not_latex_c50_fit_Table_CM_1_meds_Demographics.csv
+p2_3not_latex_nb_fit_Table_CM_1_Demographics.csv
+p2_3not_latex_nb_fit_Table_CM_1_meds_Demographics.csv
+.~lock.p2_3_latex_RF_fit_Table_CM_1_meds_Demographics.csv#
