--- a/P2_Hypothesis_Driven/output/.gitignore
+++ b/P2_Hypothesis_Driven/output/.gitignore
@@ -28,3 +28,7 @@ p2_3not_latex_c50_fit_Table_CM_1_meds_Demographics.csv
 p2_3not_latex_nb_fit_Table_CM_1_Demographics.csv
 p2_3not_latex_nb_fit_Table_CM_1_meds_Demographics.csv
 .~lock.p2_3_latex_RF_fit_Table_CM_1_meds_Demographics.csv#
+p2_3_latex_RF_fit_simple_Table_CM_1_Demographics.csv
+p2_3_latex_RF_fit_simple_Table_CM_1_meds_Demographics.csv
+p2_3not_latex_RF_fit_simple_Table_CM_1_Demographics.csv
+p2_3not_latex_RF_fit_simple_Table_CM_1_meds_Demographics.csv
