Added eset_linear_full_adj adjuseted for ethnicity, age, sex

--- a/P0_Characterise/output/.gitignore
+++ b/P0_Characterise/output/.gitignore
@@ -9,3 +9,4 @@ training_df_Table_2_Clinicalinformation.tsv
 .~lock.testing_df_Table_1_Demographics.tsv#
 .~lock.testing_df_Table_2_Clinicalinformation.tsv#
 Train_and_Test_data.Rdata
+GAP_FEP_eset_linear_full_adj_Data.RData
