--- a/P0_Characterise/figs/.gitignore
+++ b/P0_Characterise/figs/.gitignore
@@ -12,3 +12,5 @@ Relationship of Panss and BMI.png
 Relationship of Panss and Tobacco.png
 Relationship of PanssNegative and PanssPositive.png
 Medication vs PRS.png
+PRS vs Ethnicity.png
+PRS vs Psychosis categories.png
