--- a/P0_Characterise/output/.gitignore
+++ b/P0_Characterise/output/.gitignore
@@ -10,3 +10,15 @@ training_df_Table_2_Clinicalinformation.tsv
 .~lock.testing_df_Table_2_Clinicalinformation.tsv#
 Train_and_Test_data.Rdata
 GAP_FEP_eset_linear_full_adj_Data.RData
+latex_Table_1_Demographics.csv
+latex_Table_1_SczCat_Demographics.csv
+latex_Table_1_SczCat_white_Demographics.csv
+latex_Table_2_Clinicalinformation.csv
+latex_Table_2_SczCat_Clinicalinformation.csv
+latex_Table_2_SczCat_white_Clinicalinformation.csv
+no_latex_Table_1_Demographics.csv
+no_latex_Table_1_SczCat_Demographics.csv
+no_latex_Table_1_SczCat_white_Demographics.csv
+no_latex_Table_2_Clinicalinformation.csv
+no_latex_Table_2_SczCat_Clinicalinformation.csv
+no_latex_Table_2_SczCat_white_Clinicalinformation.csv
