--- a/P0_Characterise/output/.gitignore
+++ b/P0_Characterise/output/.gitignore
@@ -22,3 +22,8 @@ no_latex_Table_1_SczCat_white_Demographics.csv
 no_latex_Table_2_Clinicalinformation.csv
 no_latex_Table_2_SczCat_Clinicalinformation.csv
 no_latex_Table_2_SczCat_white_Clinicalinformation.csv
+GX_DF_full_adj_data.Rdata
+testing_df_full_Table_1_Demographics.tsv
+testing_df_full_Table_2_Clinicalinformation.tsv
+training_df_full_Table_1_Demographics.tsv
+training_df_full_Table_2_Clinicalinformation.tsv
