--- a/P0_Characterise/output/.gitignore
+++ b/P0_Characterise/output/.gitignore
@@ -27,3 +27,4 @@ testing_df_full_Table_1_Demographics.tsv
 testing_df_full_Table_2_Clinicalinformation.tsv
 training_df_full_Table_1_Demographics.tsv
 training_df_full_Table_2_Clinicalinformation.tsv
+GX_DF_adj_data.Rdata
