--- a/data/.gitignore
+++ b/data/.gitignore
@@ -1,3 +1,6 @@
 GAP_FEP_Full_Gene_Expression_Data_Linear.RData
 GeneSetsMental_Pirooznia_2016.csv
 GAP_eigenvectors.csv
+BackgroundEnrichment.tsv
+DeJong_Schizophrenia_GAP_overlap_expression_Table.csv
+DeJong_Schizophrenia_full_expression_table
