--- a/data/.gitignore
+++ b/data/.gitignore
@@ -4,3 +4,5 @@ GAP_eigenvectors.csv
 BackgroundEnrichment.tsv
 DeJong_Schizophrenia_GAP_overlap_expression_Table.csv
 DeJong_Schizophrenia_full_expression_table
+Schizophrenia_analysis_files.Rdata
+Schizophrenia_GAP_overlap_expression_Table.csv
