Script update. Added Eigenvectors.

--- a/data/.gitignore
+++ b/data/.gitignore
@@ -6,3 +6,4 @@ DeJong_Schizophrenia_GAP_overlap_expression_Table.csv
 DeJong_Schizophrenia_full_expression_table
 Schizophrenia_analysis_files.Rdata
 Schizophrenia_GAP_overlap_expression_Table.csv
+GAP_eigenvectors_from_Vangelis_04_03_2015.csv
